[package]
name = "yargs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4.22"
predicates = "3.1.0"
regex = "1.9.1"

[dev-dependencies]
assert_cmd = "2.0.12"
